# plugind

./: Cargo.toml  Dockerfile  Makefile  README.md
compose-setup/: docker-compose.yaml
plugin-example/: Cargo.toml  plugin.toml
plugin-example/src/: lib.rs
plugin-mesh/: Cargo.toml  Dockerfile
plugin-mesh-core/: Cargo.toml
plugin-mesh-core/src/: context.rs  lib.rs
plugin-mesh-macros/: Cargo.toml
plugin-mesh/src/: context.rs  invoke.rs  main.rs  upload.rs
pluginctl/: Cargo.toml
pluginctl/src/: main.rs
plugind/: Cargo.toml  Dockerfile
plugind-core/: Cargo.toml
plugind-core/src/: lib.rs
plugind-http/: Cargo.toml
plugind-http/src/: lib.rs
plugind-macros/: Cargo.toml
plugind-macros/src/: lib.rs
plugind/src/: context.rs  invoke.rs  main.rs  rpc.rs  upload.rs
