[package]
name = "pluginctl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.47", features = ["derive"] }
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"