[package]
name = "plugind"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.104.0"
axum = { version = "0.8.4", features = ["macros", "multipart"] }
plugind-core = { path = "../plugind-core" }
futures = "0.3"
libloading = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }

[[bin]]
name = "plugind"
path = "src/main.rs"
