[package]
name = "plugind"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = { version = "0.8.4", features = ["macros", "multipart"] }
plugind-core = { path = "../plugind-core" }
futures = "0.3"
libloading = "0.8.8"
minio = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
jwt-simple = { version = "0.12.12", default-features = false, features = ["pure-rust"] }

[[bin]]
name = "plugind"
path = "src/main.rs"
